BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Samples_State_Settings_vod__c.object
<CustomObject>
    <description>The Samples State Settings object provides the ability to manage State restrictions based upon the delivery mechanism of Controlled Substance sampling.  States can be restricted to not allow sampling, only allow sample sends, or only allow hand sample disbursements as it relates to Controlled Substances.  If a record does not exist for a State, then all delivery mechanisms will be allowed for the State.</description>
    <fields>
        <fullName>CDS_Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not a CDS license is required for controlled substance sampling in a particular state. Used to determine if CDS license validation occurs on a call.</description>
        <label>CDS Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External Id field to enforce uniqueness and to assist in the loading of data.  This value is maintained by a Trigger, which sets the value to the Name field (in this case State).</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Setting_vod__c</fullName>
        <description>The setting determines the delivery mechanism restriction for the defined State.</description>
        <label>Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Hand_Sample_Only_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRC_Sample_Only_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_Sample_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Samples State Settings</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Samples State Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CDSRequired_DeliverySetting_vod</fullName>
        <active>true</active>
        <description>CDS Requirements and Delivery Method Settings cannot be defined in the same record.</description>
        <errorConditionFormula>AND(CDS_Required_vod__c = True, NOT(ISBLANK(TEXT(Setting_vod__c))))</errorConditionFormula>
        <errorMessage>Cannot define CDS Requirements and Delivery Method in the same record.</errorMessage>
    </validationRules>
</CustomObject>